# rustysocks

./: Cargo.toml  Dockerfile  README.md
etc/: rustysocks.service
src/: main.rs
