[package]
name = "rustysocks"
version = "0.1.0"
authors = ["Allan Saddi <allan@saddi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "net", "time", "macros"] }

structopt = "0.3"

log = "0.4"
env_logger = "0.8.3"
