[package]
name = "rustysocks"
version = "0.2.0"
description = "Minimalistic asynchronous SOCKS5 server"
authors = ["Allan Saddi <allan@saddi.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "net", "time", "macros"] }

clap = { version = "4.4", features = ["derive"] }

log = "0.4"
env_logger = "0.11.0"
